--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "test": "test"
   },
   "dependencies": {
-    "balanced-match": "^0.1.0",
-    "rework": "^1.0.0"
+    "balanced-match": "^0.1.0"
   },
   "devDependencies": {
-    "mocha": "^1.20.1"
+    "mocha": "^1.20.1",
+    "rework": "^1.0.0"
   },
   "scripts": {
     "test": "mocha"
