--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "test"
   },
   "dependencies": {
-    "balanced-match": "^0.1.0"
+    "balanced-match": "^0.1.0",
+    "color-convert": "^0.4.0",
+    "color-string": "^0.2.0"
   },
   "devDependencies": {
     "mocha": "^1.20.1",
